--- a/index.html
+++ b/index.html
@@ -53,6 +53,66 @@
     <main>
         <!--~~~~~~~~~~~~~~~ Home ~~~~~~~~~~~~~~~-->
         <section id="home">
+          <div class="container">
+            <div class="flex flex-col items-center gap-5">
+              <!-- content -->
+              <div class="w-full space-y-5">
+                <h1>
+                  <span class="text-yellow-500">Plants</span> make a <br>
+                      positive 
+                  <span class="text-yellow-500">impact</span> on <br>
+                      your environment
+                </h1>
+                <p class="text-slate-300 font-Lobster">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio fugiat eveniet,
+                  reprehenderit veritatis aut explicabo voluptatum ullam itaque tenetur numquam!
+                </p>
+
+                <div class="flex flex-col gap-2 sm:flex-row">
+                  <button class="btn">
+                    <span>Shop Now</span>
+                    <i class="ri-leaf-line"></i>
+                  </button>
+
+                  <button class="btn btn_outline">
+                    <span>Know More</span>
+                    <i class="ri-leaf-line"></i>
+                  </button>
+                </div>
+
+                <P>
+                  You will get 30-days free trial.
+                </P>
+
+                <div>
+                  <i class="ri-facebook-fill"></i>
+                  <i class="ri-twitter-x-line"></i>
+                  <i class="ri-instagram-line"></i>
+                  <i class="ri-linkedin-fill"></i>
+                </div>
+              </div>
+              <!-- image -->
+               <div>
+                  <img src="assets/img/home.png" alt="home_image" >
+
+                  <!-- leaf -->
+                  <div>
+                    <i class="ri-leaf-line"></i>
+                  </div>
+                  
+                  <!-- leaf -->
+                  <div>
+                    <i class="ri-flower-line"></i>
+                  </div>
+
+                  <!-- leaf -->
+                  <div>
+                  <i class="ri-plant-line"></i>
+                  </div>
+
+               </div>
+            </div>
+          </div>
 
         </section>
 
