--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
                   </button>
                 </div>
 
-                <P>
+                <P class="text-xs font-Lobster  text-slate-300">
                   You will get 30-days free trial.
                 </P>
 
-                <div>
-                  <i class="ri-facebook-fill"></i>
-                  <i class="ri-twitter-x-line"></i>
-                  <i class="ri-instagram-line"></i>
-                  <i class="ri-linkedin-fill"></i>
+                <div class="flex items-cente gap-5 text-lg">
+                  <i class="ri-facebook-fill text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer"></i>
+                  <i class="ri-twitter-x-line text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer text-base"></i>
+                  <i class="ri-instagram-line text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer"></i>
+                  <i class="ri-linkedin-fill text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer"></i>
                 </div>
               </div>
               <!-- image -->
-               <div>
+               <div class="w-full relative">
                   <img src="assets/img/home.png" alt="home_image" >
 
                   <!-- leaf -->
