--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <!--~~~~~~~~~~~~~~~ Home ~~~~~~~~~~~~~~~-->
         <section id="home">
           <div class="container">
-            <div class="flex flex-col items-center gap-5">
+            <div class="flex flex-col items-center gap-5 lg:flex-row">
               <!-- content -->
-              <div class="w-full space-y-5">
+              <div class="w-full space-y-5 lg:w-1/2">
                 <h1>
                   <span class="text-yellow-500">Plants</span> make a <br>
                       positive 
@@ -68,7 +68,7 @@
                   reprehenderit veritatis aut explicabo voluptatum ullam itaque tenetur numquam!
                 </p>
 
-                <div class="flex flex-col gap-2 sm:flex-row">
+                <div class="flex flex-col gap-2 sm:flex-row md:gap-4 lg:pt-5 xl:pt-10">
                   <button class="btn">
                     <span>Shop Now</span>
                     <i class="ri-leaf-line"></i>
@@ -84,7 +84,7 @@
                   You will get 30-days free trial.
                 </P>
 
-                <div class="flex items-cente gap-5 text-lg">
+                <div class="flex items-cente gap-5 text-lg lg:pt-10">
                   <i class="ri-facebook-fill text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer"></i>
                   <i class="ri-twitter-x-line text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer text-base"></i>
                   <i class="ri-instagram-line text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer"></i>
@@ -92,22 +92,22 @@
                 </div>
               </div>
               <!-- image -->
-               <div class="w-full relative">
+               <div class="w-full relative lg:w-1/2">
                   <img src="assets/img/home.png" alt="home_image" >
 
                   <!-- leaf -->
-                  <div>
-                    <i class="ri-leaf-line"></i>
+                  <div class="absolute -top-10 right-0 opacity-30 xl:top-5">
+                    <i class="ri-leaf-line text-6xl text-yellow-500"></i>
                   </div>
                   
-                  <!-- leaf -->
-                  <div>
-                    <i class="ri-flower-line"></i>
+                  <!-- flower -->
+                  <div class="absolute bottom-0 left-0 opacity-30 xl:bottom-12">
+                    <i class="ri-flower-line text-6xl text-yellow-500"></i>
                   </div>
 
-                  <!-- leaf -->
-                  <div>
-                  <i class="ri-plant-line"></i>
+                  <!-- plant -->
+                  <div class="hidden absolute -top-10 -left-5 opacity-30 lg:block">
+                  <i class="ri-plant-line text-6xl text-yellow-500"></i>
                   </div>
 
                </div>
